# kaleidoscope

./: .gitignore  CMakeLists.txt  coverage_report.py
ir_samples/: run.py
ir_samples/ir/: code.c.ir
ir_samples/src/: code.c  example.ll  simple_function.c  simple_function.cpp
kaleidoscope/: CMakeLists.txt
kaleidoscope-tests/: CMakeLists.txt
kaleidoscope-tests/src/: ir_expression_executor.hpp  run_process.cpp  run_process_tests.cpp  util.hpp
kaleidoscope-tests/src/lexer/: lexer_tests.cpp  parser_tests.cpp  run_process.cpp  run_process.hpp  run_process_tests.cpp
kaleidoscope-tests/src/parser/: parser_tests.cpp
kaleidoscope/lexer/: CMakeLists.txt
kaleidoscope/lexer/include/kaleidoscope/lexer/: lexer.hpp  lexer_data.hpp  lexer_enums.hpp  lookahead_lexer.hpp
kaleidoscope/lexer_playground/src/: main.cpp
kaleidoscope/parser/: CMakeLists.txt
kaleidoscope/parser/include/kaleidoscope/parser/: parser.hpp
src/: CMakeLists.txt
src/lexer/: CMakeLists.txt
src/lexer/include/kaleidoscope/lexer/: lexer.hpp  lexer_data.hpp  lexer_enums.hpp  lookahead_lexer.hpp  token_type.hpp
src/lexer_playground/: CMakeLists.txt
src/lexer_playground/src/: main.cpp
src/lexer_tests/: CMakeLists.txt
src/lexer_tests/src/: lexer_tests.cpp  lookahead_tests.cpp  main.cpp  util.hpp
src/parser/: CMakeLists.txt
src/parser/include/kaleidoscope/parser/: parser.hpp
